syntax = "proto3";

option java_multiple_files=true;

package Database;

service DatabaseService{
    rpc Transfer(TransferRequest) returns (TransferResponse){};
}
message TransferRequest{
    string senderAccount_id = 1;
    string recipientAccount_id =2;
    double balance = 3;
    string message = 4;
}

message TransferResponse{
    string resp = 1;
}